--- a/frontend/.github/workflows/eslint.yml
+++ b/frontend/.github/workflows/eslint.yml
@@ -24,4 +24,4 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: npm run eslint
+        run: npm run eslint -- --max-warnings=0
