--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,10 +46,11 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "eslint": "^9.38.0",
+    "@babel/eslint-parser": "^7.28.5",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6"
   },
